--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@ Single room -  1 bed
 
 <section id="k_items"></section>
 </section>
-
+<script src="assets/javascript/menu.js"></script>
+ 
 <div class="utility">
 <span class="uitem">
 <i class="fa-solid fa-map-location-dot"></i>
