--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@ Reserve now!
 </div>
 </section>
 <section class="rms_sect">
-<div class="rms_sect_title">About Western Hotels</div>
+<div class="rms_sect_title">About Blaize Hotels</div>
 </section>
 
 <div class="utility">
