--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-<title>Blaize Hotels Reservation -Our services</title>
+<title>Blaize Hotels Reservation -About Us</title>
 <meta charset="utf-8">
 <meta name="viewport"
 content="width=device-width,intitial-scale=1.0">
@@ -117,7 +117,7 @@ bolanleblaize@gmail.com
 </span>
 </div>
 <section  class="site_footer_copyright">
-&copy;all rights reserved  &trade;westernen hotels inc 2022
+&copy;all rights reserved  &trade;blaize hotels inc 2022
 </section>
 
 
