--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@ bolanleblaize@gmail.com
 
 
 <section  class="site_footer_copyright">
-&copy;all rights reserved  &trade;westernen hotels inc 2022
+&copy;all rights reserved  &trade;blaize hotels inc 2022
 </section>
 
 </body>
