--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@ bolanleblaize@gmail.com
 </span>
 </div>
 <section  class="site_footer_copyright">
-&copy;all rights reserved  &trade;westernen hotels inc 2022
+&copy;all rights reserved  &trade;blaize hotels inc 2022
 </section>
 
 
